--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav id="menu">
             <ul>
                 <li><a href="john_wick.html">John Wick</a></li>
-                <li><a href="filme2.html">Filme 2</a></li>
+                <li><a href="princesa_mononoke.html">Princesa Mononoke</a></li>
                 <li><a href="filme3.html">Filme 3</a></li>
             </ul>
         </nav>
@@ -60,9 +60,9 @@
 
                         <td>Moacir Escórcio</td>
                         <td>
-                            abc@google.com
+                            moacirescorc@gmail.com
                         </td>
-                        <td>Alterar</td>
+                        <td>Drama, Fantaisa, Terror</td>
                         </td>
                     </tr>
                     <tr class="impar">
