--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Nossos Filmes Favoritos</h1>
         <nav id="menu">
             <ul>
-                <li><a href="john_wick.html">John Wick</a></li>
+                <li><a href="index.html">John Wick</a></li>
                 <li><a href="princesa_mononoke.html">Princesa Mononoke</a></li>
                 <li><a href="filme3.html">Filme 3</a></li>
             </ul>
