--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
                         <td>Francisco David</td>
                         <td>
-                            abc@google.com
+                            f.davi2017santossousa@gmail.com
                         </td>
-                        <td>Alterar</td>
+                        <td>Ficção, comédia e aventura</td>
                 </tbody>
                 <tfoot>
                     <tr class="exibir-mais">
