--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">John Wick</a></li>
                 <li><a href="princesa_mononoke.html">Princesa Mononoke</a></li>
-                <li><a href="como_treinar_seu_dragao_3.html">Filme 3</a></li>
+                <li><a href="como_treinar_seu_dragao_3.html">Como treinar o seu dragão 3</a></li>
             </ul>
         </nav>
     </header>
