--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <td>
                             moacirescorc@gmail.com
                         </td>
-                        <td>Drama, Fantaisa, Terror</td>
+                        <td>Drama, Fantasia, Terror</td>
                         </td>
                     </tr>
                     <tr class="impar">
