--- a/como_treinar_seu_dragao_3.html
+++ b/como_treinar_seu_dragao_3.html
@@ -60,7 +60,7 @@
                         <td>
                             moacirescorc@gmail.com
                         </td>
-                        <td>Drama, Fantaisa, Terror</td>
+                        <td>Drama, Fantasia, Terror</td>
                         </td>
                     </tr>
                     <tr class="impar">
