--- a/como_treinar_seu_dragao_3.html
+++ b/como_treinar_seu_dragao_3.html
@@ -58,7 +58,7 @@
 
                         <td>Moacir Escórcio</td>
                         <td>
-                            moacirescorc@gmail.com
+                            moacirescorcioc@gmail.com
                         </td>
                         <td>Drama, Fantasia, Terror</td>
                         </td>
